# Ombra

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  global.ts  main.ts  ombra.ts  sys_apps.ts  user_apps.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/plugin/batch-rename/: config.json  index.html
src-tauri/src/: file_catch.rs  file_watch.rs  main.rs  tools.rs  winsys.rs
src-tauri/src/api/: file_db.rs  fs.rs  img.rs  mod.rs  sys.rs  text.rs  web.rs  window.rs
src-tauri/src/unit/: file_db.rs  fs.rs  img.rs  mod.rs  time.rs  web.rs  win.rs
src/api/: app.ts  autostart.ts  cli.ts  clipboard.ts  config.ts  dialog.ts  dir.ts  directory.ts  explorer.ts  file.ts  fs.ts  globalShortcut.ts  img.ts  index.ts  notification.ts  ombra.ts  path.ts  timingTask.ts  tools.ts  url.ts  window.ts
src/apps/: apps.ts  index.ts
src/apps/FileSearch/: App.ts  AppPanel.vue  FileSearch.vue  index.ts
src/apps/FileSearch/stores/: popMenu.ts  searchResult.ts
src/apps/FileSearch/unit/: PopMenu.vue  Result.vue  Search.vue  Statusbar.vue
src/apps/Image/: AppPanel.vue  index.ts
src/apps/Markdown/: AppPanel.vue  index.ts
src/apps/Markdown/stores/: openfiles.ts
src/apps/Markdown/unit/: MainPanel.vue  ToolsPanel.vue
src/apps/Markdown/unit/MainPanel/: Blank.vue  Labels.vue  Page.vue
src/apps/Markdown/unit/MainPanel/markdown/: from_markdown.ts  index.ts  schema.ts  to_markdown.ts
src/apps/Markdown/unit/ToolsPanel/: DirNode.vue  FileTree.vue
src/apps/Markdown/unit/ToolsPanel/FileTree/: Blank.vue  DirNode.vue
src/apps/OpenFile/: App.ts  index.ts
src/apps/OpenLink/: App.ts  index.ts
src/apps/OpenPath/: App.ts  index.ts
src/apps/PluginDevelop/: AppPanel.vue  index.ts
src/apps/PluginDevelopTool/: App.ts  DevelopTool.vue
src/apps/WebQuickOpen/: App.ts  MainPanel.vue
src/components/: AppTitlebar.vue  PluginWindow.vue
src/icon/: KIArrowDown.vue  KIArrowRight.vue  KIArrowUp.vue  KIFolder.vue  KIGithub.vue  KIHtml.vue  KIImage.vue  KIJson.vue  KIMarkdown.vue  KIMinus.vue  KIMoon.vue  KIOffacc.vue  KISeparate.vue  KIText.vue  KIUnknowFile.vue  KIWechat.vue  index.ts
src/kui/: index.ts
src/kui/icon/: KIArrowLeft.vue  KIArrowRight.vue  KIClose.vue  KICsdn.vue  KIDelete.vue  KIDll.vue  KIFullScreen.vue  KIJs.vue  KIPdf.vue  KIPlus.vue  KIRegex.vue  KISunny.vue  KITypeScript.vue  KIWholeWord.vue
src/kui/unit/: KLoading.vue  KSwitch.vue  KWindow.vue
src/main/: AppPanel.vue  MainPanel.vue  Setting.vue
src/main/AppPanel/: Titlebar.vue
src/main/MainPanel/: AppMenu.vue  Search.vue  Setting.vue
src/main/Setting/: Config.vue  LocalExe.vue  Web.vue
src/plugin/: Window.vue
src/stores/: appIsInit.ts  appList.ts  config.ts
