[package]
name = "ombra"
version = "0.0.3"
description = "ombra"
authors = ["ys928"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.8.12"
window-shadows = "0.2.2"
walkdir = "2.4.0"
chrono = "0.4.31"
base64 = "0.13"
pelite = "0.10.0"
# lnk_parser = "0.4.0"
rusqlite = { version = "0.30.0", features = ["bundled", "load_extension"] }
dirs = "5.0.1"
libloading = "0.8"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard" }
notify = "6.1.1"
pinyin = "0.10.0"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_Com", "Win32_System_WindowsProgramming",
    "Win32_UI_Shell", "Win32_System_Com_StructuredStorage", "Win32_System_Variant",
    "Win32", "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_UI_Shell_PropertiesSystem"
] }
known-folders = "1.1.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
