[package]
name = "ombra"
version = "0.0.5"
description = "ombra"
authors = ["ys928"]
repository = "https://github.com/ys928/Ombra"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["system-tray", "api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "0.8.12"
window-shadows = "0.2.2"
walkdir = "2.4.0"
chrono = "0.4.31"
base64 = "0.13"
pelite = "0.10.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dirs = "5.0.1"
libloading = "0.8"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-clipboard = { git = "https://github.com/CrossCopy/tauri-plugin-clipboard" }
notify = "6.1.1"
pinyin = "0.10.0"
log = "0.4.20"
log4rs = "1.2.0"
regex = "1.10.3"
auto-launch = "0.5.0"
image = "0.24.8"
xmltree = "0.10.3"
scraper = "0.18.1"
url = "2.5.0"
rgb = "0.8.36"
lodepng = "3.10.1"
mozjpeg = "0.10.6"
imagequant = "4.3.0"
reqwest = { version = "0.11", features = ["blocking"] }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = [
    "Win32_System_Com",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System"
] }
known-folders = "1.1.0"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
