[package]
name = "Ombra"
version = "0.0.5"
description = "ombra"
authors = ["ys928"]
repository = "https://github.com/ys928/Ombra"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pinyin = "0.10.0"
walkdir = "2.4.0"
log = "0.4.21"
log4rs = "1.3.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
xmltree = "0.10.3"
rgb = "0.8.37"
lodepng = "3.10.1"
mozjpeg = "0.10.6"
dirs = "5.0.1"
window-shadows = "0.2.2"
image = "0.24.9"
imagequant = "4.3.0"
webbrowser = "0.8.12"
auto-launch = "0.5.0"
pelite = "0.10.0"
reqwest = { version = "0.11", features = ["blocking"] }
regex = "1.10.3"
notify = "6.1.1"
url = "2.5.0"
tauri-plugin-clipboard = "0.6.0"
scraper = "0.19.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
lazy_static = "1.4.0"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.53.0", features = [
    "Win32_System_Com",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Ole",
    "Win32_Graphics_Gdi",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System"
] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
